--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -411,3 +411,7 @@ msgstr ""
 msgctxt "#31995"
 msgid "Home layout"
 msgstr ""
+
+msgctxt "#31996"
+msgid "Show video playing in backgrounds"
+msgstr ""
