--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+1.0.9.01
+Forked from Amber, as dyad.
+Scroll delays adjusted
+Font sizes increased
+Video shown in background option
+Lowlist adjusted
+VideoOSD adjusted
+
 1.0.9
 Add fast start option that skips waiting for skin widgets
 Fix Player VideoInfo dialog closing
